# slist

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build_unix.sh  main.cpp  slist.h  slist_context.cpp  slist_context.h  slist_eval.cpp  slist_eval.h  slist_log.cpp  slist_log.h  slist_native.cpp  slist_native.h  slist_parser.cpp  slist_parser.h  slist_types.cpp  slist_types.h  test_basics.lisp  test_macros.lisp  tests.lisp
include/: slist_context.h  slist_eval.h  slist_log.h  slist_native.h  slist_parser.h  slist_types.h
lib/: CMakeLists.txt  dummy.txt  slist_context.cpp  slist_eval.cpp  slist_log.cpp  slist_native.cpp  slist_parser.cpp  slist_types.cpp
repl/: CMakeLists.txt
slist/: CMakeLists.txt  slist.cpp
tests/: test.lisp  test_macros.lisp  test_tail_call_optim.lisp
